# Lab8

./: .travis.yml  CMakeLists.txt  README.md
cmake/: version.cmake
src/: 1196.cpp  1496.cpp  1545.cpp  1837.cpp  CMakeLists.txt
